[gd_scene load_steps=4 format=2]

[ext_resource path="res://Semester.gd" type="Script" id=1]
[ext_resource path="res://LightThemeComponent.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_top = 10.0
draw_center = false

[node name="Semester" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Background" type="Panel" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 550.0
margin_bottom = 840.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Layout" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 550.0
margin_bottom = 840.0

[node name="Header" type="VBoxContainer" parent="Layout"]
margin_left = 79.0
margin_right = 461.0
margin_bottom = 30.0
size_flags_horizontal = 6
size_flags_vertical = 2

[node name="TitleLayout" type="HBoxContainer" parent="Layout/Header"]
margin_right = 382.0
margin_bottom = 30.0
alignment = 1

[node name="ActiveButton" type="CheckBox" parent="Layout/Header/TitleLayout"]
margin_right = 76.0
margin_bottom = 30.0
pressed = true
text = "Active"
align = 1

[node name="LineEdit" type="LineEdit" parent="Layout/Header/TitleLayout"]
margin_left = 81.0
margin_top = 4.0
margin_right = 281.0
margin_bottom = 26.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 6
align = 1
max_length = 50
placeholder_text = "Semester Title"
caret_blink = true
caret_blink_speed = 0.5

[node name="Label" type="Label" parent="Layout/Header/TitleLayout"]
margin_left = 286.0
margin_right = 356.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_styles/normal = SubResource( 1 )
text = "Semester"
align = 1
valign = 1

[node name="DeleteButton" type="Button" parent="Layout/Header/TitleLayout"]
margin_left = 361.0
margin_right = 382.0
margin_bottom = 30.0
text = "X"
icon_align = 1

[node name="Courses" type="VBoxContainer" parent="Layout"]
margin_top = 404.0
margin_right = 540.0
margin_bottom = 404.0
size_flags_vertical = 2

[node name="ButtonLayout" type="HBoxContainer" parent="Layout"]
margin_top = 808.0
margin_right = 540.0
margin_bottom = 830.0

[node name="AddButton" type="Button" parent="Layout/ButtonLayout"]
margin_left = 176.0
margin_right = 364.0
margin_bottom = 22.0
size_flags_horizontal = 6
text = "Add Course to Semester"
icon_align = 1

[connection signal="toggled" from="Layout/Header/TitleLayout/ActiveButton" to="." method="_on_ActiveButton_toggled"]
[connection signal="text_changed" from="Layout/Header/TitleLayout/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="button_down" from="Layout/Header/TitleLayout/DeleteButton" to="." method="_on_DeleteButton_button_down"]
[connection signal="button_down" from="Layout/ButtonLayout/AddButton" to="." method="_on_AddButton_button_down"]
